axonius-assessment/force-app/main/default/objects/Training_Attendee__c/Training_Attendee__c.object-meta.xml
<CustomObject>
    <description>track the attendees (pets) for each training session.</description>
    <label>Training Attendee</label>
    <nameField>
        <displayFormat>TAI-{000000}</displayFormat>
        <label>Training Attendee Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Training Attendees</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>