axonius-assessment/force-app/main/default/objects/Training_Attendee__c/fields/Attended__c.field-meta.xml
<CustomField>
    <fullName>Attended__c</fullName>
    <defaultValue>false</defaultValue>
    <description>track whether or not a pet attended a training session.</description>
    <label>Attended</label>
    <type>Checkbox</type>
</CustomField>