axonius-assessment/force-app/main/default/objects/Training_Attendee__c/fields/Pet_Name__c.field-meta.xml
<CustomField>
    <fullName>Pet_Name__c</fullName>
    <label>Pet Name</label>
    <referenceTo>Pet__c</referenceTo>
    <relationshipLabel>Training Sessions</relationshipLabel>
    <relationshipName>Training_Attendees</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>