axonius-assessment/force-app/main/default/objects/Training_Attendee__c/fields/Species__c.field-meta.xml
<CustomField>
    <fullName>Species__c</fullName>
    <formula>TEXT ( Pet_Name__r.Species__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Species</label>
    <type>Text</type>
</CustomField>