axonius-assessment/force-app/main/default/objects/Training_Attendee__c/fields/Training_Session__c.field-meta.xml
<CustomField>
    <fullName>Training_Session__c</fullName>
    <label>Training Session</label>
    <referenceTo>Training_Sessions__c</referenceTo>
    <relationshipLabel>Attendees</relationshipLabel>
    <relationshipName>Training_Attendees</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>